@@ -112,7 +112,7 @@ module NewrelicHelper
 
   # write a link to the source for a trace
   def link_to_source(trace)
-    image_url = url_for(:controller => :newrelic, :action => :image, :file => (using_textmate? ? "textmate.png" : "file_icon.png"), :content_type => 'image/png')
+    image_url = url_for(:controller => :newrelic, :action => :file, :file => (using_textmate? ? "textmate.png" : "file_icon.png"))
     
     link_to image_tag(image_url, :alt => (title = 'View Source'), :title => title), url_for_source(application_caller(trace))
   end
@@ -136,11 +136,11 @@ module NewrelicHelper
   end
   
   def expanded_image_path()
-    url_for(:controller => :newrelic, :action => :image, :file => 'arrow-open.png')
+    url_for(:controller => :newrelic, :action => :file, :file => 'arrow-open.png')
   end
   
   def collapsed_image_path()
-    url_for(:controller => :newrelic, :action => :image, :file => 'arrow-close.png')
+    url_for(:controller => :newrelic, :action => :file, :file => 'arrow-close.png')
   end
   
   def explain_sql_url(segment)
@@ -246,8 +246,7 @@ private
   end
   
   def using_textmate?
-    # For now, disable textmate integration
-    false
+    NewRelic::Control.instance.use_textmate?
   end
   
 
