@@ -1,18 +1,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
     xml:lang="en" lang="en">
 <head>
-<script type="text/javascript" src="<%= url_for(:controller => :newrelic, :action => :javascript, :file => 'prototype-scriptaculous.js') %>"></script>
+<script type="text/javascript" src="<%= url_for(:controller => :newrelic, :action => :file, :file => 'prototype-scriptaculous.js') %>"></script>
 <title>New Relic RPM Developer Mode</title>
-	<link href="<%= url_for(:controller => :newrelic, :action => :css, :file => 'style.css') %>" 
+	<link href="<%= url_for(:controller => :newrelic, :action => :file, :file => 'style.css') %>" 
 				media="screen" rel="stylesheet" type="text/css" />
 </head>
 <body>
 	<div id="header">
-		<img width="100%" height="4" src="<%= url_for(:controller => :newrelic, :action => :image, :file => 'blue_bar.gif', :content_type => 'image/gif') %>" alt="spacer"/>
+		<img width="100%" height="4" src="<%= url_for(:controller => :newrelic, :action => :file, :file => 'blue_bar.gif') %>" alt="spacer"/>
 		<table width="100%" height="60">
 			<tr>
 				<td valign="middle">
-					<a href='/newrelic'><img src="<%= url_for(:controller => :newrelic, :action => :image, :file => 'new_relic_rpm_desktop.gif', :content_type => 'image/gif') %>" hspace="10" alt="New Relic RPM"/></a>
+					<a href='/newrelic'><img src="<%= url_for(:controller => :newrelic, :action => :file, :file => 'new_relic_rpm_desktop.gif') %>" hspace="10" alt="New Relic RPM"/></a>
 				</td>
 				<td class="top_nav" valign="bottom">
 					<ul id="navlist">
@@ -22,7 +22,7 @@
 			</tr>
 		</table>
 		<div id="page_nav">
-			<table width="100%" height="100%" background="<%= url_for(:controller => :newrelic, :action => :image, :file => 'gray_bar.gif', :content_type => 'image/gif') %>">
+			<table width="100%" height="100%" background="<%= url_for(:controller => :newrelic, :action => :file, :file => 'gray_bar.gif') %>">
 				<tr valign="middle">
 					<td>
 						<span class="application_title">Developer Mode</span>
@@ -38,7 +38,7 @@
 		<%= yield %>
 	</div>
 	<div id='footer'>
-		<img width="100%" height="4" src="<%= url_for(:controller => :newrelic, :action => :image, :file => 'blue_bar.gif', :content_type => 'image/gif') %>" alt="spacer"/>
+		<img width="100%" height="4" src="<%= url_for(:controller => :newrelic, :action => :file, :file => 'blue_bar.gif', :content_type => 'image/gif') %>" alt="spacer"/>
 		<p>
 		<a href="/newrelic">Home</a> | <a href="&#109;&#97;&#105;&#108;&#116;&#111;:&#x73;&#x75;&#x70;&#112;&#111;&#x72;&#116;&#x40;&#x6E;&#x65;&#119;&#114;&#x65;&#x6C;&#105;&#x63;&#x2E;&#99;&#x6F;&#109;?subject=&#70;&#101;&#x65;&#x64;&#x62;&#x61;&#x63;&#107;" title="">&#x46;&#x65;&#101;&#x64;&#98;&#97;&#x63;&#x6B;</a><br />
 		Monitor your Rails Application in Production. <a href="http://www.newrelic.com/dev-upgrade.html">Learn more. &raquo;</a><br />
