@@ -1,4 +1,4 @@
-<script type="text/javascript" src="<%= url_for(:controller => :newrelic, :action => :javascript, :file => 'transaction_sample.js') %>"></script>
+<script type="text/javascript" src="<%= url_for(:controller => :newrelic, :action => :file, :file => 'transaction_sample.js') %>"></script>
 <div id='summary_table'>
 <table class="light_background">
   <tr>
